--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tag above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>BI Data Analytics</title>
+  </head>
+  <body>
+    <div id="root">
+      Kasra
+    </div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
----
-title: "Example Document"
-author: "Your name here"
-output:
-  html_document:
-    self_contained: false
----
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-```{r, include=FALSE}
-tutorial::go_interactive()
-```
+      To begin the development, run `npm start`.
+      To create a production bundle, use `npm run build`.
+    -->
 
-By default, `tutorial` will convert all R chunks.
+    <script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
 
-```{r}
-a <- 2
-b <- 3
-
-a + b
-```
+  </body>
+</html>
