--- a/index.html
+++ b/index.html
@@ -41,26 +41,12 @@
 	</code>
 		
 	<code data-type="sample-code">
-		# Create a variable a, equal to 5
-
-
-		# Print out a
-
-
+		# Kasra
 	</code>
+		
 	<code data-type="solution">
-		# Create a variable a, equal to 5
-		a <- 5
-
-		# Print out a
-		print(a)
+		summary(marketingdata)
 	</code>
-	<code data-type="sct">
-		test_object("a")
-		test_function("print")
-		success_msg("Great job!")
-	</code>
-	<div data-type="hint">Use the assignment operator (<code><-</code>) to create the variable <code>a</code>.</div>
 </div>
 
 <p>You can use the <a href="https://github.com/kasrakhosravi/aaa/edit/master/README.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
