--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
 	</code>
 		
 	<code data-type="sample-code">
+		#This command will give us a summary statistics of the R object
+		summary(marketingData)
+		
+		#This command will give us the dimensions of the R object we are dealing with
+		summary(marketingData)
+		
+		#This command will give us more details about the type of data object we are working with
 		summary(marketingData)
 	</code>
 		
