--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		summary(marketingData)
 		
 		#This command will give us the dimensions of the R object we are dealing with
-		summary(marketingData)
+		dim(marketingData)
 		
 		#This command will give us more details about the type of data object we are working with
-		summary(marketingData)
+		class(marketingData)
 	</code>
 		
     </div>
