--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	      </span>
 	      <br />
 	      <span id='footer-author'>
-	      Course Professor <a href='https://www.bi.no/om-bi/ansatte/institutt-for-samfunnsokonomi/gudmund-hermansen/'>Gudmund Hermansen</a> As the Course
+	      Course Instructor: Associate Professor <a href='https://www.bi.no/om-bi/ansatte/institutt-for-samfunnsokonomi/gudmund-hermansen/'>Gudmund Hermansen</a> As the Course
 	      </span>
       </footer>
 	
