--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <footer class="site-footer">
 	      <span id='footer-author'>
-    		Made with <i style='color: red' class="fa fa-heart pulse"></i> By Kasra
+		      Made with <i style='color: red' class="fa fa-heart pulse"></i> By <a href='https://github.com/kasrakhosravi'>Kasra</a>
 	      </span>
 	      <br />
 	      <span id='footer-author'>
