--- a/index.html
+++ b/index.html
@@ -89,18 +89,22 @@
 		# We can explore the summary statistics of a single variable in a dataset which will give us values like min and max numbers, mean, median, etc.
 		with(marketingData, summary(Salary))
 		
-		# Also it is possible to draw a histogram based on a single variable. It shows us a general overview about the distribution of the variable values
+		# (1st Plot) Also it is possible to draw a histogram based on a single variable. It shows us a general overview about the distribution of the variable values
 		with(marketingData, hist(Salary))
 		
 		# Imagine that we only need the mean and standard deviation for a single variable in a dataset. R will allow us to get it fast and easy :). It is important to keep in mind that not all datasets distributions are Gaussian (Bell-Like) and therefore different interpretations might be needed
 		with(marketingData, mean(Salary))
 		with(marketingData, sd(Salary))
 		
-		# We have used a histogram before but histogram is not the best option to compare data distribution. Here we are only exploring one variable but it would be nice to have the  to get familiar with the tools we can use in future
-		with(marketingData, plot(density(Salary), xlab='Salary'))
-		
 		# It is beneficial to mention that calculating summary statistics is not useful for every type of dataset like categorical or discrete values. For instance in this dataset, Children variable can only have discrete values in order to be meaningful; therefore calculating its mean will not give us much of an important result. What does it mean to have 0.934 children? :)
 		with(marketingData, mean(Children))
+		
+		# (2nd Plot) We have used a histogram before but histogram is not the best option to compare data distribution. Here we are only exploring one variable but it would be nice to have the  to get familiar with the tools we can use in future
+		with(marketingData, plot(density(Salary), xlab='Salary'))
+		
+		# Lets see waht happens when we bring a histogram and a density plot together. Magic Happens :)
+		with(marketingData, hist(Salary, probability= TRUE, col='grey75'))
+		with(marketingData, lines(density(Salary), col='red'))
 		
 		
 	</code>
