--- a/index.html
+++ b/index.html
@@ -102,11 +102,14 @@
 		# (2nd Plot) We have used a histogram before but histogram is not the best option to compare data distribution. Here we are only exploring one variable but it would be nice to have the  to get familiar with the tools we can use in future
 		with(marketingData, plot(density(Salary), xlab='Salary'))
 		
-		# Lets see waht happens when we bring a histogram and a density plot together. Magic Happens :)
+		# (Plot 3 and $) Lets see waht happens when we bring a histogram and a density plot together. Magic Happens :)
 		with(marketingData, hist(Salary, probability= TRUE, col='grey75'))
 		with(marketingData, lines(density(Salary), col='red'))
 		
-		
+		# We are still exploring single values but lets bring few hsitograms with different variables into a single plot and compare them.
+		par(mfrow = c(1,4))
+		with(marketingData, hist(Location, col='red'))
+		with(marketingData, hist(Catalogs, col='green'))
 	</code>
 		
     </div>
