--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -16,7 +16,7 @@
   <body>
 
     <section class="page-header">
-      <h1 class="project-name">BI Data Analytics</h1>
+	    <h1 class="project-name"><a href='https://kasrakhosravi.github.io/bi-data-analytics'>BI Data Analytics</a></h1>
       <h2 class="project-tagline"></h2>
         <a href="https://github.com/kasrakhosravi/bi-data-analytics" class="btn">View on GitHub</a>
     </section>
