--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -16,10 +16,9 @@
   <body>
 
     <section class="page-header">
-	<a href='https://kasrakhosravi.github.io/bi-data-analytics'>
-    <h1 class="project-name">BI Data Analytics</a>
+    <h1 class="project-name">BI Data Analytics</h1>
       <h2 class="project-tagline"></h2>
-        <a href="https://github.com/kasrakhosravi/bi-data-analytics" class="btn">View on GitHub</a>
+        <a href="https://kasrakhosravi.github.io/bi-data-analytics" class="btn">Homepage</a>
     </section>
 
     <section class="main-content">
