--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 	    
       <h3>Lectures</h3>
       <a href="1st-lecture.html" title="1st Lecture">1st Lecture</a>
+	    
+      <h3>Labs</h3>	
+      <a href="3rd-lab.html" title="1st Lecture">3rd Lab</a>
 
 	  
 
