--- a/3rd-lab.html
+++ b/3rd-lab.html
@@ -44,7 +44,7 @@
 
       require(RCurl)
 
-      birthData <-read.tsv(
+      birthData <-read.csv(
         text=getURL(
           "https://raw.githubusercontent.com/kasrakhosravi/bi-data-analytics/master/birthsmokers.tsv"),
         header=T, 
