--- a/3rd-lab.html
+++ b/3rd-lab.html
@@ -26,12 +26,15 @@
       <h4 id="welcome-to-github-pages">Third Lab</h4>  
 	    
     <p style='font-size: 14px'>
-      In this lab we are gonna analyze a dataset which shows the relationship between
+      In this lab session we are gonna analyze a dataset which shows the relationship between
       maternal smoking and the baby's birth weight. A low birth weight is known to be
       a contributing factor to a number of infant deaths, and babies with a low birth
       weight (who survives) are more prone to various health problems. Here we try to
-      understand the effect of smoking on birth weight. In particular, we are interestanding
-      to what extent smoking during pregnancy affect the birth weight of babies.
+      understand the effect of smoking on birth weight. In particular, we are interested in 
+      understanding to what extent smoking during pregnancy affect the birth weight of babies.
+      Before we start our analysis, it is important to point out that e need to trust the data
+      that was gathered by the researchers and trust them on the fact that any difference that
+      is seen in birth weight is probabely related to smoking.
     </p>
 
     <br />
