--- a/3rd-lab.html
+++ b/3rd-lab.html
@@ -32,9 +32,10 @@
       weight (who survives) are more prone to various health problems. Here we try to
       understand the effect of smoking on birth weight. In particular, we are interested in 
       understanding to what extent smoking during pregnancy affect the birth weight of babies.
-      Before we start our analysis, it is important to point out that e need to trust the data
-      that was gathered by the researchers and trust them on the fact that any difference that
-      is seen in birth weight is probabely related to smoking.
+      Before we start our analysis, it is important to point out that we need to trust the data
+      that was gathered by the researchers and also trust them on the fact that any difference that
+      is seen in birth weight is probabely related to smoking and no other extra factor that was not
+      considered by the researchers.
     </p>
 
     <br />
