--- a/2nd-lecture.html
+++ b/2nd-lecture.html
@@ -61,7 +61,7 @@ housingData <-read.csv(
 		
 <code data-type="sample-code">
 #This command will give us a general summary of a single categorical variable
-with(housingData, summary(Brick))
+with(housingData, summary(Offers))
 </code>
 		
 </div>
