--- a/2nd-lecture.html
+++ b/2nd-lecture.html
@@ -60,8 +60,8 @@ housingData <-read.csv(
 </code>
 		
 <code data-type="sample-code">
-#This command will give us a general summary of a single categorical variable. There is actually two ways to achieve
-this for categorical data.
+# This command will give us a general summary of a single categorical variable. There is actually two ways to achieve
+# this for categorical data.
 with(housingData, summary(Brick))
 with(housingData, table(Brick))
 </code>
