--- a/2nd-lecture.html
+++ b/2nd-lecture.html
@@ -60,7 +60,7 @@ housingData <-read.csv(
 </code>
 		
 <code data-type="sample-code">
-# This command will give us a general summary of a single categorical variable. There is actually two ways to achieve. This for categorical data.
+# This command will give us a general summary of a single categorical variable. There is actually two ways to achieve this for categorical data.
 with(housingData, summary(Brick))
 with(housingData, table(Neighborhood))
 	
@@ -73,7 +73,7 @@ with(housingData, round(
 	
 # (Plot 1): Another tool for analysing a single categorical variable is to use a barplot. It gives us the same information as the 'table' function above but it displays it more visually
 with(housingData, barplot(
-	table(Neighbodhood), main = 'Neighborhood'
+	table(Neighborhood), main = 'Neighborhood'
 ))
 	
 # Some of you might ask why we have used something like 'table(sth)' after the 'barplot()' functuin. It seemed that we did not have to pass such an input to other types of functions like 'plot()'? Well, the simple explanation is that this function need a a vector or matrix of values describing the bars which make up the plot and that is exactly what we are doign with 'table(sth)'
