--- a/2nd-lecture.html
+++ b/2nd-lecture.html
@@ -135,9 +135,22 @@ with(housingData, plot(
 	bg = 'grey'
 ))
 	
-# Next we try to include a smoothening curve into the data. We do that by using the 'smooth.spline()' function and pass it into the 'lines()' function in order to draw it. You can also see that we assign the 'df = 5' to give the smoothening curve a higher degree of freedom for more flexibility. Try assigning lower and higher values for the 'df' parameter to see what happens. It seems that lower 'df' will follow the sample data trend less strictly and a higher value is more flexibile in following its trend.
+# (Plot 2): Next we try to include a smoothening curve into the data. We do that by using the 'smooth.spline()' function and pass it into the 'lines()' function in order to draw it. You can also see that we assign the 'df = 5' to give the smoothening curve a higher degree of freedom for more flexibility. Try assigning lower and higher values for the 'df' parameter to see what happens. It seems that lower 'df' will follow the sample data trend less strictly and a higher value is more flexibile in following its trend.
 with(housingData, lines(
 	smooth.spline(SqM, Price, df = 5),
+	col = 'red'
+))
+	
+# (Plot 3): But assigning a high value for 'df' for every variable and dataset will not always give us a flexible and reliable model. Check out this one and see if you can reason why the red line is not quite representative of the sample dataset.
+ith(housingData, plot(
+	Price,
+	Offers,
+	cex = 2.5,
+	pch = 21,
+	bg = 'grey'
+))
+with(housingData, lines(
+	smooth.spline(Price, Offers, df = 5),
 	col = 'red'
 ))
 	
