--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 	<span id='footer-author'>
 	Course Instructor: Associate Professor <a href='https://www.bi.no/om-bi/ansatte/institutt-for-samfunnsokonomi/gudmund-hermansen/'>Gudmund Hermansen</a>
 	</span>
+	<span id='footer-author'>
+	This is a student project maintained by a student and is not associated with BI Norwegian Business School directly
+	</span>
 </footer>
 	
 </section>
