--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</span>
 	<br />
 	<span id='footer-author'>
-	This is a student project maintained by a student and is not associated with BI Norwegian Business School directly
+	This is a student project maintained by a student and is not associated with BI Norwegian Business School
 	</span>
 </footer>
 	
