--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -26,10 +26,11 @@
       <h4 id="welcome-to-github-pages">First Lecture</h4>  
 	    
     <p style='font-size: 14px'>
-	Data exploration is crucial in today's world; especially in the busines realm. What we mean by data exploration
-	is to <b>provide an overview of the data, to tell a story, suggest hypothesises, detect trends, and dsicover subgroups</b>. We are dealing with various types of	
-	different types of variables like numerical (discrete or continues), categorical and ordinal and data exploration
-	will give us the tools and concepts to handle those variables and get valuable insights from them.
+			Data exploration is crucial in today's world; especially in the busines realm. What we mean by data exploration
+			is to <b>provide an overview of the data, to tell a story, suggest hypothesises, detect trends, and dsicover subgroups</b>. 
+			We are dealing with various types of different types of variables like numerical (discrete or continues), categorical and
+			ordinal; Data exploration will give us the tools and concepts to handle those variables and get valuable insights from
+			them.
     </p>
 	    
     <h5 id="welcome-to-github-pages">General Data Exploration</h5>   
