--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <h3>Lectures</h3>
 <a href="1st-lecture.html" title="1st Lecture">1st Lecture</a> 
 <br />
-<a href="2nd-lecture.html" title="1st Lecture">2nd Lecture</a>
+<a href="2nd-lecture.html" title="2nd Lecture">2nd Lecture</a>
+<br />
+<a href="3rd-lecture.html" title="erd Lecture">3rd Lecture</a>
 	    
 <h3>Labs</h3>	
 <a href="3rd-lab.html" title="1st Lecture">3rd Lab</a>
